--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "FreeCodeCamp's timestamp microservice project",
   "main": "app.js",
-  "repository": "https://github.com/rennyandres/fcc-timestamp.git",
+  "repository": "https://github.com/rennyandres/fcc-timestamp",
   "author": "Renny Andres",
   "dependencies": {
     "ejs": "^2.6.1",
