--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "FreeCodeCamp's timestamp microservice project",
   "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "repository": "https://github.com/rennyandres/fcc-timestamp",
   "author": "Renny Andres",
   "dependencies": {
